Update package info.

--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "typescript-action",
+  "name": "checkswitch-action",
   "description": "GitHub Actions TypeScript template",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "author": "",
   "private": true,
-  "homepage": "https://github.com/actions/typescript-action",
+  "homepage": "https://github.com/kineolyan/checkswitch-action",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/kineolyan/checkswitch-action.git"
   },
   "bugs": {
-    "url": "https://github.com/actions/typescript-action/issues"
+    "url": "https://github.com/kineolyan/checkswitch-action/issues"
   },
   "keywords": [
     "actions",
     "node",
-    "setup"
+    "checklist"
   ],
   "exports": {
     ".": "./dist/index.js"
