--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ author: Kineolyan
 
 # Define your inputs here.
 inputs:
-  github_token:
+  github-token:
     description: Token for the GitHub API.
     default: ${{ github.token }}
   delay:
