--- a/.github/workflows/test-run.yml
+++ b/.github/workflows/test-run.yml
@@ -12,6 +12,10 @@ jobs:
   test-bash:
     name: Test consuming output from bash
     runs-on: ubuntu-latest
+
+    permissions:
+      pull-requests: write
+
     steps:
       - name: Checkout
         id: checkout
