--- a/.github/workflows/test-run.yml
+++ b/.github/workflows/test-run.yml
@@ -14,8 +14,9 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write
-      pull-requests: write
+      # contents: write
+      # pull-requests: write
+      permissions: write-all
 
     steps:
       - name: Checkout
