--- a/.github/workflows/test-run.yml
+++ b/.github/workflows/test-run.yml
@@ -13,10 +13,10 @@ jobs:
     name: Test consuming output from bash
     runs-on: ubuntu-latest
 
-    permissions:
+    # permissions:
       # contents: write
       # pull-requests: write
-      permissions: write-all
+    permissions: write-all
 
     steps:
       - name: Checkout
