--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,9 +32,9 @@ jobs:
         id: npm-format-check
         run: npm run format:check
 
-      # - name: Lint
-      #   id: npm-lint
-      #   run: npm run lint
+      - name: Lint
+        id: npm-lint
+        run: npm run lint
 
       - name: Test
         id: npm-ci-test
